<resources>
    <string name="app_name">PassTheBomb</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_in_with_facebook">Sign In With Facebook</string>
    <string name="create_lobby">Create Lobby</string>
    <string name="join_lobby">Join with password</string>
    <string name="create_lobby_back">Back</string>
    <string name="create_lobby_open_lobby">Open Lobby</string>
    <string name="create_lobby_easy">Easy</string>
    <string name="create_lobby_medium">Medium</string>
    <string name="create_lobby_hard">Hard</string>
    <string name="create_lobby_config_game_settings">Configure game settings</string>
    <string name="create_lobby_trivia_category">Trivia category:</string>
    <string name="create_lobby_trivia_difficulty">Trivia difficulty:</string>
    <string name="create_lobby_game_name">Game name</string>
    <string name="calibrate_activity_done">Done</string>
    <string name="calibrate_activity_description">Point at</string>
    <string name="join_lobby_enter_password">Enter password</string>
    <string name="join_lobby_join">Join</string>
    <string name="lobby_trivia_category">Trivia category</string>
    <string name="lobby_trivia_difficulty">Trivia difficulty</string>
    <string name="lobby_game_settings">Game settings</string>
    <string name="lobby_players">Players</string>
    <string name="name">Name</string>
    <string name="lobby_start_game">Start game</string>
    <string name="lobby_lobby_name">Lobby name</string>
    <string name="lobby_password">Password</string>
    <string name="create_lobby_privacy">Privacy</string>
    <string name="create_lobby_public">Public</string>
    <string name="loading_dialog_message">Getting game ready</string>
    <string name="lobby_leave">Leave lobby</string>
    <string name="lobby_destroy">Destroy lobby</string>
    <string name="lobby_host">Host</string>
    <string name="result_loser_description">just exploded! What a loser...</string>
    <string name="result_return_to_menu">Return to main menu</string>
    <string name="start_available_games">Available public games</string>
    <string name="start_dialog_title">Join lobby</string>
    <string name="start_dialog_message">Do you want to join game</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
